force-app/main/default/objects/Holder_Option__c/Holder_Option__c.object-meta.xml
<CustomObject>
    <label>Holder Option</label>
    <nameField>
        <displayFormat>HO# {0000000}</displayFormat>
        <label>Holder Option #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holder Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>