force-app/main/default/objects/Holder_Option__c/fields/Excess_Flow_Valve__c.field-meta.xml
<CustomField>
    <fullName>Excess_Flow_Valve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excess Flow Valve</label>
    <type>Checkbox</type>
</CustomField>