force-app/main/default/objects/Holder_Option__c/fields/JackscrewDrilling__c.field-meta.xml
<CustomField>
    <fullName>JackscrewDrilling__c</fullName>
    <label>JackscrewDrilling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>