force-app/main/default/objects/Holder_Option__c/fields/OptionCode__c.field-meta.xml
<CustomField>
    <fullName>OptionCode__c</fullName>
    <label>OptionCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>