force-app/main/default/objects/Holder_Option__c/fields/Pressure_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Gauge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pressure Gauge</label>
    <type>Checkbox</type>
</CustomField>