force-app/main/default/objects/Holder_Option__c/fields/Reducing_Bushing__c.field-meta.xml
<CustomField>
    <fullName>Reducing_Bushing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reducing Bushing</label>
    <type>Checkbox</type>
</CustomField>