force-app/main/default/objects/Holder_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
    <columns>NAME</columns>
    <columns>OptionCode__c</columns>
    <columns>Knifeblade_Material__c</columns>
    <columns>GaugeTap__c</columns>
    <columns>EyeboltDrilling__c</columns>
    <columns>JHook__c</columns>
    <columns>Facing__c</columns>
    <columns>Coating__c</columns>
    <columns>Lining__c</columns>
    <columns>JackscrewDrilling__c</columns>
    <columns>Bore__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OptionCode__c</field>
        <operation>equals</operation>
        <value>001</value>
    </filters>
    <filters>
        <field>OptionCode__c</field>
        <operation>equals</operation>
        <value>002</value>
    </filters>
    <filters>
        <field>OptionCode__c</field>
        <operation>equals</operation>
        <value>003</value>
    </filters>
    <filters>
        <field>OptionCode__c</field>
        <operation>equals</operation>
        <value>069</value>
    </filters>
    <filters>
        <field>Bore__c</field>
        <operation>equals</operation>
        <value>075</value>
    </filters>
    <filters>
        <field>OptionCode__c</field>
        <operation>equals</operation>
        <value>096</value>
    </filters>
    <filters>
        <field>OptionCode__c</field>
        <operation>equals</operation>
        <value>0A3</value>
    </filters>
    <filters>
        <field>OptionCode__c</field>
        <operation>equals</operation>
        <value>0B1</value>
    </filters>
    <filters>
        <field>OptionCode__c</field>
        <operation>equals</operation>
        <value>0B6</value>
    </filters>
    <filters>
        <field>OptionCode__c</field>
        <operation>equals</operation>
        <value>0D1</value>
    </filters>
    <label>All</label>
</ListView>